--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -9,3 +9,14 @@
     width: 25rem;
 }
 
+.error {
+    margin: 1rem;
+    color: red;
+    border: 5px solid red;
+    border-radius: 3px;
+    font-size: 1.5rem;
+    background-color: aliceblue;
+    text-align: center;
+    width: 25rem;
+}
+
